--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ body {
 h1,h2,h3,p {
   margin: 0;
 }
+
+h1 {
+  padding-left: 0.7em;
+}
+
 input, textarea {
   color: #333;
   padding: 8px;
