--- a/src/pages/hero/Hero.css
+++ b/src/pages/hero/Hero.css
@@ -9,6 +9,10 @@
     padding-bottom: 1.2em;
 }
 
+.empty-space {
+    padding: 1em;
+}
+
 @media (max-width: 768px) {
     .hero-info {
         flex-direction: column;
